workshop/openshift/mock-infra/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-mock-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workshop-mock-infra
  template:
    metadata:
      labels:
        app: workshop-mock-infra
        app.kubernetes.io/name: workshop-mock-infra
    spec:
      containers:
        - name: nginx
          image: quay.io/nginx/nginx-unprivileged:stable-alpine
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /f5_pool.json
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /f5_pool.json
              port: http
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: content
          configMap:
            name: workshop-mock-content
