workshop/openshift/mock-infra/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: workshop-mock-infra
spec:
  selector:
    app: workshop-mock-infra
  ports:
    - name: http
      port: 8080
      targetPort: http
