workshop/openshift/mock-infra/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-mock-infra
spec:
  to:
    kind: Service
    name: workshop-mock-infra
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
